syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.gameplay";

service CharacterServerInteractionService {
  rpc EnterToServer (EnterToServerDto) returns (google.protobuf.Empty);
}

message EnterToServerDto {
  string characterId = 1;
}
